--- a/css/index.css
+++ b/css/index.css
@@ -452,22 +452,143 @@ section {
     border-radius: 0 .5rem .5rem 0;
     border: 0.1rem solid transparent;
 }
-.testimonial_section .profile-box{
+
+.testimonial_section .profile-box {
     padding: 1.875rem;
     background-color: #03262c;
     border-radius: .5rem 0 0 .5rem;
 }
-.testimonial_section .profile-box img{
+
+.testimonial_section .profile-box img {
     border-radius: .625rem 3.125rem;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.testimonial_section .desc-box{
+
+.testimonial_section .desc-box {
     padding-left: 2.5rem;
 }
 
 /* testiminol end */
+
+
+
+/* gallery section start */
+.gallery_section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+
+/* gallery section end */
+/* footer start */
+.footer_wrapper {
+    background: url(../assets/footer/footer_bg.png);
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    padding-top: 15rem;
+    padding-bottom: 0rem;
+}
+
+.footer_wrapper h5 {
+    color: #dee2e6;
+    font-size: 2.5rem;
+    margin-bottom: 1.25rem;
+}
+
+.footer_wrapper ul li {
+    margin-bottom: 0.5rem;
+    list-style: none;
+}
+
+.footer_wrapper .company-details {
+    font-size: 1.4rem;
+
+}
+
+.footer_wrapper .contact-info li a {
+    color: #dee2e6;
+    font-size: 1.6rem;
+}
+
+.footer_wrapper .link-widget li a,
+.footer_wrapper p {
+    color: #dee2e6;
+    font-size: 1.3rem;
+    padding-left: 1.5rem;
+    position: relative;
+    -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+}
+
+.footer_wrapper .link-widget li a:before {
+    content: '\f105';
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    position: absolute;
+    left: 0.3rem;
+    top: 50%;
+    -webkit-transform: translatey(-50%);
+    transform: translatey(-50%);
+
+}
+
+.footer_wrapper .link-widget li a:hover {
+    margin-left: 1rem;
+    color: #5cb917;
+}
+
+.footer_wrapper .social-network a {
+    width: 3.5rem;
+    height: 3.5rem;
+    line-height: 3.2rem;
+    margin: .5rem;
+    display: inline-block;
+    border: 0.125rem solid #dee2e6;
+    text-align: center;
+    border-radius: 100%;
+    -webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.footer_wrapper .social-network a:hover {
+    background-color: #5cb917;
+    border-color: #5cb917;
+    color: #dee2e6;
+    box-shadow: 0 0.625rem .9375rem 0 rgb(0 0 0 / 100%);
+    transform: translateY(-0.1875rem);
+}
+
+.footer_wrapper .form-control {
+    font-size: 2rem;
+    color: #dee2e6;
+}
+.footer_wrapper .form-control:focus{
+    outline: none;
+    box-shadow: none;
+    border-color: #5cb917;
+}
+.footer_wrapper .copyright-section{
+    background-color: #5cb917;   
+    width: 100%;
+    /* height: 10rem; */
+    text-align: center;
+    margin-top: 5rem;
+}
+.footer_wrapper .copyright-section p{
+    margin-top: 0;
+    padding: 3rem 0;
+    line-height: 0;
+}
+.footer_wrapper .copyright-section a{
+    color: #061738;
+    font-weight: 600 ;
+}
+/* footer end */
 
 @media (max-width:1170px) {
 
