made complete about page and half product page

--- a/css/about.css
+++ b/css/about.css
@@ -3,4 +3,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    padding-top: 17rem;
+    padding-bottom: 10rem;
+    min-height: auto;
 }
